# 7552-TDPII

./: .travis.yml  .travis.yml~  APITests.py  CMakeLists.txt  Makefile  Makefile~  README.md  README.md~  googleTest.cpp  mainTest.cpp  scriptCoverage.sh
Docker/: Dockerfile  ReadmeDocker.txt  docker-entrypoint.sh
doc/: .gitignore  Makefile
doc/.doctrees/: api.doctree  environment.pickle  index.doctree
doc/source/: api.rst  conf.py  index.rst  tecnica.rst
src/: AppServer.cpp  Conversation.cpp  Conversation.h  Database.cpp  Database.h  Like.cpp  Like.h  Manager.cpp  Manager.cpp~  Manager.h  Match.cpp  Match.h  Message.cpp  Message.h  Server.cpp  Server.h  SharedManager.cpp  SharedManager.h  TDPII.cpp  User.cpp  User.h  Utils.cpp  Utils.h  main.cpp  mongoose.c
src/Factories/: EventHandlerFactory.cpp  EventHandlerFactory.h  LikeFactory.cpp  LikeFactory.h  MessageFactory.cpp  MessageFactory.h  UserFactory.cpp  UserFactory.h
src/HttpEvents/: CreateUserEvent.cpp  CreateUserEvent.h  DeleteUserEvent.cpp  DeleteUserEvent.h  EventHandler.cpp  EventHandler.h  GetCandidateEvent.cpp  GetCandidateEvent.h  GetConversationEvent.cpp  GetConversationEvent.h  GetMessages.cpp  GetMessages.h  GetUserDataEvent.cpp  GetUserDataEvent.h  GetUserMatches.cpp  GetUserMatches.h  GetUsers.cpp  GetUsers.h  LoginUserEvent.cpp  LoginUserEvent.h  NotAllowedEvent.cpp  NotAllowedEvent.h  SaveMessageEvent.cpp  SaveMessageEvent.h  SaveUserLike.cpp  SaveUserLike.cpp~  SaveUserLike.h  UpdateUserData.cpp  UpdateUserData.h
src/Private/: Log.cpp
src/Private/Server/: ApplicationServerConnection.cpp  Connection.cpp  HttpRequest.cpp  HttpRequestHandler.cpp  RestServer.cpp  SharedServerConnection.cpp
src/Public/: Application.h  Log.h
src/Public/Server/: ApplicationServerConnection.h  Connection.h  HttpRequest.h  HttpRequestHandler.h  IHttpRequestReader.h  IServerConnection.h  RestServer.h  SharedServerConnection.h
src/Resources/: Logger.cpp  Logger.h
src/SharedClient/: CurlManager.cpp  CurlManager.h  SharedManager.cpp  SharedManager.h
src/Tests/: ConversationTests.cpp  DatabaseTests.cpp  ManagerTests.cpp  MessageTests.cpp  ServerTests.cpp  SharedGetUser.cpp  SharedInterestTests.cpp  SharedUserTests.cpp  UserTests.cpp  UtilsTests.cpp
test/: googleTest.cpp
